Improved the UI and completed Readme file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>Want to read a Joke?</h1>
+  <h1> <a href="/joke"> Want to read a Joke?</a></h1>
   <div class="card">
     <p>
       <%= joke %>
